assets/css/main.scss
---
---

@import url(bw.css);
@import url('https://rsms.me/inter/inter.css');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&display=swap');
@import "reset";
@import "config";

.title{
    margin-top: 40px;
    margin-left: 45px;
    font-weight: 800;
    font-family: 'inter';
    color: #514e4e;
    border-left: 1px solid #dddcdc;
    padding-left: 30px;
    font-size: 16px;

    a:visited {
        color: #514e4e;
        text-decoration: none;
    }
}

.footer {
    p {
        font-size: 12px;
        color: #514e4e;
    }

    a:visited {
        text-decoration: none;
        color: #514e4e;
    }

    margin-top: 40px;
    margin-left: 45px;
    font-weight: 300;
    font-family: 'inter';
    border-top: 1px solid #dddcdc;
    margin-top: 160px;
    margin-bottom: -20em;
    padding-left: 30px;
    padding-top: 15px;
    margin-right: -100em;
    border-left: 1px solid #dddcdc;
    padding-bottom: 40px;
}

.page {
    margin-left: 45px;
    display: block;
    border-left: 1px solid #dddcdc;
    padding-left: 30px;
    margin-top: -6em;
    margin-bottom: -10em;
    padding-bottom: 100px;

    .nav {
        // width: 100px;
        // margin-left: 18px;
        // min-width: 100px;
        // position: fixed;
        margin-bottom: 20px;
        border-bottom: 1px solid #dddcdc;
        padding-bottom: 10px;
        margin-left: -1.9em;
        padding-top: 95px;
        padding-left: 31px;
        margin-bottom: 25px;
        margin-right: -100em;

        a {
            font-family: 'inter';
            // line-height: 8px;
            font-weight: 700;
            font-style: normal;
            font-size: 16px;
            color: gray;
        }


        ul {
            list-style: none;
            align-content: left;
            justify-content: left;
            display: flex;
            // max-width: 90px;

            li {
                // text-align: right;
                padding-right: 14px;
                // line-height: 17px;
                // list-style: none;
                // width: 90px;
            }
        }
    }

  .cont {
    // margin-left: 180px;
    // flex: 1;
    justify-content: center;
    align-items: center;
    // display: flex;
  }
}

@media (max-width: 500px) {
  .page {
    flex-direction: column;
    align-items: center;
    .nav {
      width: 65%;
      ul {
        display: flex;
        justify-content: space-between;
      }
    }
  }
  .page .cont {
      margin-left: 120px;
      justify-content: center;
      align-items: center;
      display: flex;
    }

  .page {
      display: inline-block;
      .cont {
          margin-left: 0px;
        }
        .nav {
            margin-left: 0px;
            position: relative;
            ul li {
                padding-bottom: 10px;
                padding-right: 10px;
            }
        }
  }
}

.site-title {
    font-family: 'inter', sans-serif;
    text-align: left;
    align-self: center;
    font-size: 44px;
    font-weight: 700;
    margin-bottom: 10px;
    line-height: 45px;
    max-width: 550px;
}

body {
    color: #000000;
    background: #ffffff;
    font-family:  'inter', sans-serif;
    font-size: 12pt;
    line-height: 1.5;
    font-weight: 400;
    word-wrap: break-word;
}

hr {
    color: #ffffff;
}

p {
    font-size: 12pt;
    line-height: 1.25em;
}

// ul {
//     list-style: none;
//     align-items: baseline;
//     li {
//         padding: 5px;
//         padding-left: 10px;
//         @media screen and (max-width: $br) {
//             padding: 10px 0 10px 0;
//         }
//     }
// }


.wrapper {
    max-width: 950px;
    margin: auto;
    // padding: 44px 0px 0px 44px;
    @media screen and (max-width: $br) {
        padding: 20px;
    }
}


// header (name)
.header {
    display: inline;
    justify-content: space-between;
    align-items: baseline;
    @media screen and (max-width: $br) {
        display: block;
    }
    h1 {
        font-size: 12pt;
        font-family:  'inter', sans-serif;
		font-weight: 500;
        padding-bottom: 5px;
		text-align: left;
    }
    // ul {
    //     margin-top: 10px;
    //     li {
    //         display: inline;
    //         padding: 0;
    //         padding-left: 5px;
    //     }
    // }

}

b {
    font-weight: 600;
}

i {
    font-style: italic;
}

// navigation item separation
#navigation ul li {
	margin: 0;
	padding: 0;
    list-style-type: none;
    display: inline;
}

#navigation li:not(:first-child):before {
    content: " · ";
}

// description text
.description {
    a {
        line-height: 1.5;
        font-weight: 400;
        font-style: normal;
        font-size: 12pt;
        color: #000000;
        border-bottom: 2px solid #d2d2d2;
        &:hover {
            text-decoration: none;
            background-color: #fcf7a2;
            border-bottom: 0px;
        }
    }
}

// desc
.desc {
    max-width: 550px;

	h2 {
        font-size: 12pt;
	}

    p {
        font-family:  'inter', sans-serif;
        font-size: 12pt;
        font-weight: 400;
        line-height: 23px;
        margin-bottom: 5px;
        justify-items: center;
    }
}


.portfolio {
    padding-bottom: 30px;
    h1 {
        font-size: 1em;
        margin-bottom: 5px;
    }
}
/* ... */

